--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aiocache==0.11.1
 aiohttp==3.8.1
+flake8==4.0.1
 gunicorn==20.1.0
+pytest==7.1.2
 ramos==1.4.0
 simple-settings==1.2.0
 uvloop==0.16.0
